--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "node-watch": "^0.5.5"
   },
   "devDependencies": {
+    "@conzian/vuetify": "^1.1.2",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "vue": "^2.5.9",
-    "vuetify": "^1.0.0-alpha.3"
+    "vue": "^2.5.9"
   }
 }
